--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
                                 <transformer
                                         implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <manifestEntries>
-                                        <Main-Class>com.test.Selenium</Main-Class>
+                                        <Main-Class>com.qa.selenium.SeleniumTests</Main-Class>
                                     </manifestEntries>
                                 </transformer>
                             </transformers>
