--- a/pom.xml
+++ b/pom.xml
@@ -11,12 +11,12 @@
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-api</artifactId>
-            <version>2.52.0</version>
+            <version>3.141.59</version>
         </dependency>
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
-            <artifactId>selenium-chrome-driver</artifactId>
-            <version>2.52.0</version>
+            <artifactId>selenium-edge-driver</artifactId>
+            <version>3.141.59</version>
         </dependency>
     </dependencies>
 
