--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <dependencies>
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
-            <artifactId>selenium-api</artifactId>
+            <artifactId>selenium-java</artifactId>
             <version>3.141.59</version>
         </dependency>
         <dependency>
